--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,5 @@
 development:
   adapter: sqlite3
-  database: db/fantasy_sports.sqlite3
+  database: db/development.sqlite3 
+  pool: 5
+  timeout: 5000
